kyverno/cleanup-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyverno-cleanup-controller
spec:
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
      appProtocol: https
---
apiVersion: v1
kind: Service
metadata:
  name: kyverno-cleanup-controller-metrics
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: metrics-port
